--- a/index.html
+++ b/index.html
@@ -6,80 +6,83 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 </head>
 <body>
-<div class="container  ">
-<nav class="navbar navbar-expand-lg">
-
-        <div class="col-2">
-        <a class="navbar-brand" href="#">Navbar</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
+<div class="container">
+    <nav class="row border-bottom align-items-center py-3 mb-3">
+        <div class="col-12 col-md-4 text-center text-md-start "><h3>Company Name</h3></div>
+        <div class="col-12 col-md-8 text-center text-md-end">
+            <a href="#" class="px-3">Features</a>
+            <a href="#" class="px-3">Enterprise</a>
+            <a href="#" class="px-3">Support</a>
+            <a href="#" class="px-3">Pricing</a>
         </div>
-        <div class="collapse navbar-collapse col-4 offset-7" id="navbarNav">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Features</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Pricing</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link disabled">Disabled</a>
-                </li>
-            </ul>
+    </nav>
+
+    <div class="row">
+        <div class="col-12 col-md-6 offset-md-3 text-center py-5">
+            <h1>Pricing</h1>
+            <p>Quickly build an effective pricing table for your potential customers with this Bootstrap example. It's built with default Bootstrap components and utilities with little customization.</p>
         </div>
     </div>
-</nav>
-<div class="text-center my-5 col-12 position-relative py-5 border-top">
-<h1>Pricing</h1>
-    <p class="my-3 col-4 position-absolute top-20 start-50 translate-middle-x">Quickly build an effective pricing table for your potential customers with this Bootstrap example. It’s built with default Bootstrap components and utilities with little customization.</p>
-</div>
 
-<div class="row text-center py-5 d-flex justify-content-center column-gap-3">
-<div class="card col-12 col-lg-4" style="width: 18rem;">
-    <div class="card-body mb-4">
-        <h5 class="card-title">Free</h5>
-        <h6>$0/mo</h6>
-        <ul class="list-unstyled class">
-            <li>10 users included</li>
-            <li>2 GB of storage</li>
-            <li>Email support</li>
-            <li>Help center access</li>
-        </ul>
-        <a href="#" class="btn btn-primary">Sign up for free</a>
-    </div>
-</div>
+    <div class="row">
+        <div class="col-12 col-md-4">
+            <div class="card text-center mb-3">
+                <div class="card-header">
+                    <h3>Free</h3>
+                </div>
+                <div class="card-body">
+                    <h1 class="card-title">$0<span class="text-muted">/mo</span></h1>
+                    <ul class="list-unstyled">
+                        <li>10 users included</li>
+                        <li>2 GB of storage</li>
+                        <li>Email support</li>
+                        <li>Help center access</li>
+                    </ul>
 
-<div class="card col-12 col-lg-4" style="width: 18rem;">
-    <div class="card-body mb-4">
-        <h5 class="card-title">Pro</h5>
-        <h6>$15/mo</h6>
-        <ul class="list-unstyled class">
-            <li>20 users included</li>
-            <li>10 GB of storage</li>
-            <li>Priority Email support</li>
-            <li>Help center access</li>
-        </ul>
-        <a href="#" class="btn btn-primary">Sign up for free</a>
-    </div>
-</div>
 
-<div class="card col-12 col-lg-4" style="width: 18rem;">
-    <div class="card-body mb-4">
-        <h5 class="card-title">Enterprise</h5>
-        <h6>$29/mo</h6>
-        <ul class="list-unstyled class">
-            <li>30 users included</li>
-            <li>15 GB of storage</li>
-            <li>Phone & Email support</li>
-            <li>Help center access</li>
-        </ul>
-        <a href="#" class="btn btn-primary">Sign up for free</a>
+                    <a href="#" class="btn btn-outline-primary btn-lg w-100">Sign up for free</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-12 col-md-4">
+            <div class="card text-center mb-3">
+                <div class="card-header">
+                    <h3>Free</h3>
+                </div>
+                <div class="card-body">
+                    <h1 class="card-title">$0<span class="text-muted">/mo</span></h1>
+                    <ul class="list-unstyled">
+                        <li>10 users included</li>
+                        <li>2 GB of storage</li>
+                        <li>Email support</li>
+                        <li>Help center access</li>
+                    </ul>
+
+
+                    <a href="#" class="btn btn-outline-primary btn-lg w-100">Sign up for free</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-12 col-md-4">
+            <div class="card text-center mb-3">
+                <div class="card-header text-bg-primary">
+                    <h3>Free</h3>
+                </div>
+                <div class="card-body">
+                    <h1 class="card-title">$0<span class="text-muted">/mo</span></h1>
+                    <ul class="list-unstyled">
+                        <li>10 users included</li>
+                        <li>2 GB of storage</li>
+                        <li>Email support</li>
+                        <li>Help center access</li>
+                    </ul>
+
+
+                    <a href="#" class="btn btn-outline-primary btn-lg w-100">Sign up for free</a>
+                </div>
+            </div>
+        </div>
     </div>
-</div>
 
     <footer class="pt-4 my-md-5 border-top row">
         <div class="col-3">
@@ -97,10 +100,11 @@
             </ul>
         </div>
         <div class="col-3 col-md">
-            <h5>Features</h5>
+            <h5>Resources</h5>
             <ul class="list-unstyled text-small">
-                <li>Cool stuff</li>
-                <li>Random feature</li>
+                <li>Resource</li>
+                <li>Resource name
+                 py-3 </li>
                 <li>Team feature</li>
                 <li>Stuff for developers</li>
                 <li>Another one</li>
